toolkit/loki/manifests/ingress/gateway.yaml
---
# Source: loki-distributed/templates/ingress/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-distributed-gateway
  namespace: obskit
  labels:
    app.kubernetes.io/name: loki-distributed
    app.kubernetes.io/instance: loki
    app.kubernetes.io/component: gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: loki.obskit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-distributed-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - loki.obskit.com
      secretName: loki-distributed-gateway-tls
